# properwatcher

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.sample.toml  pipeline.yuml
examples/: scheduled_lambda.md
src/: configuration.rs  crawlers.rs  enrichers.rs  filters.rs  geocode.rs  main.rs  models.rs  observers.rs
src/crawlers/: config.rs  crawler.rs  executor.rs  immoscout.rs  immowelt.rs  sueddeutsche.rs  wggesucht.rs  wohnungsboerse.rs
src/enrichers/: enricher.rs  geocoder.rs  nominatim.rs
src/filters/: criteria.rs  csv.rs  dynamodb.rs  filter.rs
src/models/: encodings.rs  flat.rs
src/observers/: csv.rs  debug.rs  dynamodb.rs  firebase.rs  mail.rs  observer.rs  telegram.rs
tutorial/: 0_intro.md  1_create_lambda.md  2_schedule_lambda.md  3_dynamodb.md  4_notifications.md
