[package]
name = "properwatcher"
version = "1.0.0"
authors = ["Florian Schnell <floschnell@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = ""
homepage = "http://properwatcher.com"
repository = "https://github.com/floschnell/properwatcher.git"
documentation = "https://github.com/floschnell/properwatcher"

[dependencies]
kuchiki = {version = "0.8.0"}
reqwest = {version = "0.10.6"}
regex = "1.3.9"
chrono = "0.4.11"
tokio = {version = "0.2.21", features = ["rt-threaded", "macros"]}
serde_json = "1.0.53"
serde = "1.0.111"
serde_derive ="1.0.111"
config = "0.10.1"
url = "2.1.1"
encoding_rs = "0.8.23"
firestore-db-and-auth = "0.6.0"
tbot = "0.6.4"
num-format = "0.4.0"
lettre = "0.9"
lettre_email = "0.9"