[package]
name = "properwatcher"
version = "1.1.0"
authors = ["Florian Schnell <floschnell@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = ""
homepage = "http://properwatcher.com"
repository = "https://github.com/floschnell/properwatcher.git"
documentation = "https://github.com/floschnell/properwatcher"

[dependencies]
kuchiki = {version = "0.8.0"}
reqwest = {version = "0.10.6", features = ["json"]}
regex = "1.3.9"
chrono = "0.4.13"
tokio = {version = "0.2.21", features = ["full"]}
serde_json = "1.0.56"
serde = "1.0.114"
serde_derive ="1.0.114"
config = "0.10.1"
url = "2.1.1"
encoding_rs = "0.8.23"
tbot = "0.6.4"
num-format = "0.4.0"
lettre = "0.9"
lettre_email = "0.9"
csv = "1.1"
lambda_runtime = "0.2.1"
rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"
serde_dynamodb = "0.5.1"
async-trait = "0.1.36"
futures = "0.3.5"